--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <h2 class="logo">Logo</h2>
         <nav class="navigation">
-            <a href="/index.html">Home</a>
-            <a href="/about.html">About</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
             <button class="btnLogin-popup">Login</button>
